[package]
name = "omega"
version = "0.1.0"
authors = ["Gaurav Sehgal <dggs222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
rand = "0.5.5"
log = "0.4"
pnet = "0.28.0"
socket2 = { version = "0.4.1", features = ["all"] }
bytebuffer =  "0.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.9.0"
thread-id = "4.0.0"
