[package]
name = "omega"
version = "0.1.0"
authors = ["Gaurav Sehgal <dggs222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util"] }
socket2 = { version = "0.4.1", features = ["all"] }
log = "0.4"
env_logger = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
portpicker = "0.1.1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.5"
